--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "3.1.0",
     "typescript": "^5.3.2"
