--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "python.testing.pytestEnabled": true,
   "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
-  "files.eol": "\n"
+  "files.eol": "\n",
+  "editor.formatOnSave": true
 }
