--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "python.testing.pytestEnabled": true,
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "flake8.lintOnChange": true
+  "flake8.lintOnChange": true,
+  "python.formatting.provider": "black"
 }
