Revert "update python formatter"
This reverts commit fa3c546165885ac576e2c25e8aadb0b29ead9946.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,5 @@
   "python.testing.pytestEnabled": true,
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "flake8.lintOnChange": true,
-  "python.formatting.provider": "black"
+  "flake8.lintOnChange": true
 }
