--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,5 @@ eol=lf
 # git-crypt
 *.txt filter=git-crypt diff=git-crypt
 *.md filter=git-crypt diff=git-crypt
+.gitattributes !filter !diff
+**/README.md
