Revert "update default formatter"
This reverts commit a78add15216a0e3dbc26cbe5de2b9d3cc8c2cf2d.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "flake8.lintOnChange": true,
   "[python]": {
-    "editor.defaultFormatter": "mikoz.black-py"
+    "editor.defaultFormatter": "ms-python.black-formatter"
   }
 }
